<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/green">

        <ImageButton
            android:id="@+id/btn_setting"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:src="@mipmap/setting"
            app:layout_constraintBottom_toTopOf="@+id/tv_oprt"
            app:layout_constraintEnd_toStartOf="@+id/et_input1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />

        <EditText
            android:id="@+id/et_input1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:focusable="false"
            android:gravity="center|end"
            android:hint="@null"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/grey_cc"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/et_input2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintStart_toEndOf="@id/btn_setting"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_oprt"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/et_input2"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_setting"
            app:layout_constraintVertical_weight="1" />

        <EditText
            android:id="@+id/et_input2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:focusable="false"
            android:gravity="center|end"
            android:hint="@null"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/grey_cc"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintStart_toEndOf="@id/tv_oprt"
            app:layout_constraintTop_toBottomOf="@+id/et_input1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/et_output"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:autofillHints=""
        android:background="@color/light_green"
        android:focusable="false"
        android:gravity="center|end"
        android:hint="@null"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:background="@color/white"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/button_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/button_line2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btn_ac"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_ac"
                android:textColor="@color/future_blue"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_del"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_del"
                android:textColor="@color/future_blue"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_pm"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_pn"
                android:textColor="@color/future_blue"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_div"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_div"
                android:textColor="@color/future_blue"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/button_line3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_line1">

            <Button
                android:id="@+id/btn_7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_7"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_8"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_9"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_mul"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_mul"
                android:textColor="@color/future_blue"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_line3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/button_line4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_line2">

            <Button
                android:id="@+id/btn_4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_4"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_5"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_6"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_sub"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_sub"
                android:textColor="@color/future_blue"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_line4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/button_line5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_line3">

            <Button
                android:id="@+id/btn_1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_1"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_2"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_3"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_add"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_add"
                android:textColor="@color/future_blue"
                android:textSize="40sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_line5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_line4">

            <Button
                android:id="@+id/btn_00"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_00"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_0"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_dot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_dot"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_eq"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/operator_eq"
                android:textColor="@color/dark_green"
                android:textSize="40sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>